<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDailyBillsMainActivity">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="349dp"
        android:layout_height="295dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_id"
        android:layout_width="145dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <EditText
        android:id="@+id/totalTeaKg"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/total_kg"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_id" />

    <EditText
        android:id="@+id/teaPacket"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/tea_packet"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_id"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <EditText
        android:id="@+id/fertilizerId"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/fertilizer"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dolomite" />

    <EditText
        android:id="@+id/dolomite"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/dolamite"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advancedFee" />

    <EditText
        android:id="@+id/advancedFee"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/advance_fee"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTeaKg" />

    <Button
        android:id="@+id/addBillBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:text="@string/add_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fertilizerId" />
</androidx.constraintlayout.widget.ConstraintLayout>