<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="312dp"
        android:layout_height="124dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2023-12-15 total KG"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="200KG"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textSize="20sp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="add daily bills"
        app:layout_constraintEnd_toEndOf="@+id/addDailybills"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/addDailybills"
        app:layout_constraintTop_toBottomOf="@+id/addDailybills" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_bills"
        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <ImageButton
        android:id="@+id/ViewDailyBills"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"

        app:layout_constraintStart_toEndOf="@+id/addDailybills"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:srcCompat="@drawable/baseline_payments_24" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_transactions"
        app:layout_constraintEnd_toEndOf="@+id/ViewDailyBills"
        app:layout_constraintStart_toStartOf="@+id/ViewDailyBills"
        app:layout_constraintTop_toBottomOf="@+id/ViewDailyBills" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="312dp"
        android:layout_height="129dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2023-12  total KG"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000KG"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="20sp"/>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ViewDailyBills"
        app:srcCompat="@drawable/baseline_print_24_create_bills" />

    <ImageButton
        android:id="@+id/addDailybills"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ViewDailyBills"
        app:srcCompat="@drawable/baseline_post_add_24" />

    <ImageButton
        android:id="@+id/addUsers"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/imageButton8"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/baseline_person_add_24" />

    <TextView
        android:id="@+id/textView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_users"
        app:layout_constraintEnd_toEndOf="@+id/addUsers"
        app:layout_constraintStart_toStartOf="@+id/addUsers"
        app:layout_constraintTop_toBottomOf="@+id/addUsers" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addUsers"
        app:srcCompat="@drawable/baseline_view_timeline_24_view_bills" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/view_bills"
        app:layout_constraintEnd_toEndOf="@+id/imageButton7"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/imageButton7"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addUsers"
        app:srcCompat="@drawable/baseline_attach_money_24" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_profit"
        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
        app:layout_constraintStart_toStartOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />
</androidx.constraintlayout.widget.ConstraintLayout>